--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -4,7 +4,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>To The Moon</title>
-<link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.2/dist/flowbite.min.css" />
+<link rel="stylesheet"
+	href="https://unpkg.com/flowbite@1.5.2/dist/flowbite.min.css" />
+<link rel="stylesheet" href="/css/dashboard.css"/>
 </head>
 <body>
 	<nav
@@ -12,9 +14,10 @@
 		<div
 			class="container flex flex-wrap justify-between items-center mx-auto">
 			<a th:href="@{/dashboard}" class="flex items-center"> <img
-				src="/images/ttm-logo.png"
-				class="mr-3 h-6 sm:h-9" alt="TTM Logo" /> <span
-				class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">TTM Portfolio Manager</span>
+				src="/images/ttm-logo.png" class="mr-3 h-6 sm:h-9" alt="TTM Logo" />
+				<span
+				class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">TTM
+					Portfolio Manager</span>
 			</a>
 			<div class="flex md:order-2">
 				<button type="button" data-collapse-toggle="navbar-search"
@@ -38,9 +41,6 @@
 								clip-rule="evenodd"></path></svg>
 						<span class="sr-only">Search icon</span>
 					</div>
-					<input type="text" id="search-navbar"
-						class="block p-2 pl-10 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-						placeholder="Search...">
 				</div>
 				<button data-collapse-toggle="navbar-search" type="button"
 					class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -76,61 +76,72 @@
 						class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
 						aria-current="page">Home</a></li>
 					<li><a href="@{/myportfolio/stocks}"
-						class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">My Stocks</a>
-					</li>
+						class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">My
+							Stocks</a></li>
 					<li><a href="@{/myportfolio/crypto}"
-						class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">My Crypto</a>
-					</li>
+						class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">My
+							Crypto</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-	
+	<div class="banner">
+		<form>
+   			 <div class="flex">
+     		   <label for="search-dropdown" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-gray-300">Your Email</label>
+     		   <button id="dropdown-button" data-dropdown-toggle="dropdown" class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600" type="button">All categories <svg aria-hidden="true" class="ml-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></button>
+     		   <div id="dropdown" class="hidden z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700" data-popper-reference-hidden="" data-popper-escaped="" data-popper-placement="top" style="position: absolute; inset: auto auto 0px 0px; margin: 0px; transform: translate3d(897px, 5637px, 0px);">
+     	       <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-button">
+         		   <li>
+         		       <button type="button" class="inline-flex py-2 px-4 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Stock</button>
+         		   </li>
+         		   <li>
+           		       <button type="button" class="inline-flex py-2 px-4 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Crypto</button>
+           		  </li>
+         	   </ul>
+    		  </div>
+    		  <div class="relative w-96">
+        		  <input type="search" id="search-dropdown" class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-r-lg border-l-gray-50 border-l-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-l-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500" placeholder="Search Mockups, Logos, Design Templates..." required>
+       			  <button type="submit" class="absolute top-0 right-0 p-2.5 text-sm font-medium text-white bg-blue-700 rounded-r-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+       			       <svg aria-hidden="true" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+          		       <span class="sr-only">Search</span>
+         		 </button>
+     		  </div>
+    	   </div>
+	    </form>
+	</div>
+	<div class="overflow-x-auto relative shadow-md sm:rounded-lg">
+		<table
+			class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+			<thead
+				class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+				<tr>
+					<th scope="col" class="py-3 px-6">Stock name</th>
+					<th scope="col" class="py-3 px-6">Symbol</th>
+					<th scope="col" class="py-3 px-6">Sector</th>
+					<th scope="col" class="py-3 px-6">Industry</th>
+					<th scope="col" class="py-3 px-6">Price</th>
+					<th scope="col" class="py-3 px-6">Action</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+					<th scope="row"
+						class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+						Apple MacBook Pro 17"</th>
+					<td class="py-4 px-6">Sliver</td>
+					<td class="py-4 px-6">Laptop</td>
+					<td class="py-4 px-6">$2999</td>
+					<td class="py-4 px-6"><a th:href="@/{userId}/myportfolio/delete(userId=${user.userId})"
+						class="font-medium text-blue-600 dark:text-red-500 hover:underline">Delete</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
 	<script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
+	<script src="/js/dashboard.js" type="text/javascript"></script>
 </body>
 </html>
-
-<!--  <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900"> -->
-<!-- 	  <div class="container flex flex-wrap justify-between items-center mx-auto"> -->
-<!-- 	  <a th:href="@{/dashboard}" class="flex items-center"> -->
-<!-- 	      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">TTM Portfolio Tracker</span> -->
-<!-- 	  </a> -->
-<!-- 	  <div class="flex md:order-2"> -->
-<!-- 	    <button type="button" data-collapse-toggle="navbar-search" aria-controls="navbar-search" aria-expanded="false" class="md:hidden text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 mr-1" > -->
-<!-- 	      <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg> -->
-<!-- 	      <span class="sr-only">Search</span> -->
-<!-- 	    </button> -->
-<!-- 	    <div class="hidden relative md:block"> -->
-<!-- 	      <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none"> -->
-<!-- 	        <svg class="w-5 h-5 text-gray-500" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg> -->
-<!-- 	        <span class="sr-only">Search icon</span> -->
-<!-- 	      </div> -->
-<!-- 	      <input type="text" id="search-navbar" class="block p-2 pl-10 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search..."> -->
-<!-- 	    </div> -->
-<!-- 	    <button data-collapse-toggle="navbar-search" type="button" class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-search" aria-expanded="false"> -->
-<!-- 	      <span class="sr-only">Open menu</span> -->
-<!-- 	      <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg> -->
-<!-- 	    </button> -->
-<!-- 	  </div> -->
-<!-- 	    <div class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1" id="navbar-search"> -->
-<!-- 	      <div class="relative mt-3 md:hidden"> -->
-<!-- 	        <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none"> -->
-<!-- 	          <svg class="w-5 h-5 text-gray-500" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg> -->
-<!-- 	        </div> -->
-<!-- 	        <input type="text" id="search-navbar" class="block p-2 pl-10 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search..."> -->
-<!-- 	      </div> -->
-<!-- 	      <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium"> -->
-<!-- 	        <li> -->
-<!-- 	          <a th:href="@{/dashboard}" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">Home</a> -->
-<!-- 	        </li> -->
-<!-- 	        <li> -->
-<!-- 	          <a th:href="@{/stocks}" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Stocks</a> -->
-<!-- 	        </li> -->
-<!-- 	        <li> -->
-<!-- 	          <a th:href="@{/crypto}" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Crypto</a> -->
-<!-- 	        </li> -->
-<!-- 	      </ul> -->
-<!-- 	    </div> -->
-<!-- 	  </div> -->
-<!-- 	</nav> -->
 
