--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -8,3 +8,16 @@
 	justify-content: center;
 	align-items: center;
 }
+
+.welcome{
+	font-family: "Audiowide", sans-serif;
+	font-size: 100px;
+	vertical-align: top;
+	color: white;
+}
+
+.search{
+	font-size: 45px;
+	font-family: "Audiowide", sans-serif;
+	color: white;
+}
