--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet"
 	href="https://unpkg.com/flowbite@1.5.2/dist/flowbite.min.css" />
 <link rel="stylesheet" href="/css/dashboard.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body>
 	<nav
@@ -56,16 +57,18 @@
 	</nav>
 	<div class="banner">
 		<div>
-			<h1>
+			<h1  class="welcome">
 				Welcome <span th:text="${user.username}"></span>
 			</h1>
+		</div>
+		<div>
+			<h2 class="search">
+				Search For Your Next Investment Below!
+			</h2>
 		</div>
 		<div class="mt-8">
 			<form>
 				<div class="flex">
-					<label for="search-dropdown"
-						class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-gray-300">Your
-						Email</label>
 					<button id="dropdown-button" data-dropdown-toggle="dropdown"
 						class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600"
 						type="button">
@@ -112,36 +115,6 @@
 			</form>
 		</div>
 	</div>
-	<div class="overflow-x-auto relative shadow-md sm:rounded-lg">
-		<table
-			class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-			<thead
-				class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-				<tr>
-					<th scope="col" class="py-3 px-6">Stock name</th>
-					<th scope="col" class="py-3 px-6">Symbol</th>
-					<th scope="col" class="py-3 px-6">Sector</th>
-					<th scope="col" class="py-3 px-6">Industry</th>
-					<th scope="col" class="py-3 px-6">Price</th>
-					<th scope="col" class="py-3 px-6">Action</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-					<th scope="row"
-						class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-						Apple MacBook Pro 17"</th>
-					<td class="py-4 px-6">Sliver</td>
-					<td class="py-4 px-6">Laptop</td>
-					<td class="py-4 px-6">$2999</td>
-					<td class="py-4 px-6"><a th:href="@{/dashboard}"
-						class="font-medium text-blue-600 dark:text-red-500 hover:underline">Delete</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-
 	<script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
 	<script src="/js/dashboard.js" type="text/javascript"></script>
 </body>
