--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -1,7 +1,7 @@
 .banner{
     background-image: url(/images/banner-image.jpg);
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: cover;
 	height: 600px;
 	display:flex;
 	flex-direction: column;
