--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -68,11 +68,12 @@
 		</div>
 		<div>
 			<h3 class="instructions">
-				Begin by selecting a category then search by company/project or Symbol
+				Begin By Selecting A Category Then Search By Company/Project Name
 			</h3>
 		</div>
 		<div class="mt-8">
-			<form>
+			<form id="submit-form">
+			   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 				<div class="flex">
 					<button id="dropdown-button" data-dropdown-toggle="dropdown"
 						class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600"
@@ -103,10 +104,10 @@
 					</div>
 					<div class="relative w-96">
 					
-						<input type="search" id="search-dropdown"
+						<input th:type="search"  id="search-dropdown"
 							class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-r-lg border-l-gray-50 border-l-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-l-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500"
 							placeholder="Search by Name" required>
-						<button type="submit"
+						<button id="search" type="submit"
 							class="absolute top-0 right-0 p-2.5 text-sm font-medium text-white bg-blue-700 rounded-r-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
 							<svg aria-hidden="true" class="w-5 h-5" fill="none"
 								stroke="currentColor" viewBox="0 0 24 24"
@@ -125,5 +126,7 @@
 	<script src="/js/dashboard.js" type="text/javascript"></script>
 </body>
 </html>
-<
+
 <!-- @/{userId}/myportfolio/delete(userId=${user.userId}) -->
+<!-- th:field="${search.searchString}" -->
+<!-- th:action="@{/dashboard/results/{searchType}/{searchString}(searchType=${search.searchType}, searchString= ${search.searchString})}" method="GET" -->
