--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -72,35 +72,26 @@
 			</h3>
 		</div>
 		<div class="mt-8">
-			<form id="submit-form">
+			<form id="submit-form" th:action="@{/dashboard/results}" method="POST">
 			   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 				<div class="flex">
-					<button id="dropdown-button" data-dropdown-toggle="dropdown"
-						class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600"
-						type="button">
-						All categories
-						<svg aria-hidden="true" class="ml-1 w-4 h-4" fill="currentColor"
-							viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd"
-								d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-								clip-rule="evenodd"></path></svg>
-					</button>
-					<div id="dropdown"
-						class="hidden z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700"
-						data-popper-reference-hidden="" data-popper-escaped=""
-						data-popper-placement="top"
-						style="position: absolute; inset: auto auto 0px 0px; margin: 0px; transform: translate3d(897px, 5637px, 0px);">
-						<ul class="py-1 text-sm text-gray-700 dark:text-gray-200"
+					<div id="dropdown">
+						
+						<select id="dropdown" th:field="${search.searchType}" class="flex-shrink-0 z-10 w-32 inline-flex items-center py-2.5 px-4 text-sm font-medium text-start text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600"
 							aria-labelledby="dropdown-button">
-							<li>
-								<button id ="stock-category" type="button"
-									class="inline-flex py-2 px-4 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Stock</button>
-							</li>
-							<li>
-								<button id="crypto-category" type="button"
-									class="inline-flex py-2 px-4 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Crypto</button>
-							</li>
-						</ul>
+							
+								<option th:value="none" class="inline-flex py-2 px-4 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Select One</option>
+								
+							
+								<option th:value="Stock"
+									class="inline-flex py-2 px-4 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Stock</option>
+							
+							
+								<option th:value="Crypto"
+									class="inline-flex py-2 px-4 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Crypto</option>
+							
+						</select>
+						
 					</div>
 					<div class="relative w-96">
 					
