--- a/src/main/resources/templates/my_portfolio.html
+++ b/src/main/resources/templates/my_portfolio.html
@@ -18,40 +18,6 @@
 				class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">TTM
 					Portfolio Manager</span>
 			</a>
-			<div class="flex md:order-2">
-				<button type="button" data-collapse-toggle="navbar-search"
-					aria-controls="navbar-search" aria-expanded="false"
-					class="md:hidden text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 mr-1">
-					<svg class="w-5 h-5" aria-hidden="true" fill="currentColor"
-						viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd"
-							d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-							clip-rule="evenodd"></path></svg>
-					<span class="sr-only">Search</span>
-				</button>
-				<div class="hidden relative md:block">
-					<div
-						class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
-						<svg class="w-5 h-5 text-gray-500" aria-hidden="true"
-							fill="currentColor" viewBox="0 0 20 20"
-							xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd"
-								d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-								clip-rule="evenodd"></path></svg>
-						<span class="sr-only">Search icon</span>
-					</div>
-				</div>
-				<button data-collapse-toggle="navbar-search" type="button"
-					class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-					aria-controls="navbar-search" aria-expanded="false">
-					<span class="sr-only">Open menu</span>
-					<svg class="w-6 h-6" aria-hidden="true" fill="currentColor"
-						viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd"
-							d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-							clip-rule="evenodd"></path></svg>
-				</button>
-			</div>
 			<div
 				class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1"
 				id="navbar-search">
@@ -98,6 +64,7 @@
 					<th scope="col" class="py-3 px-6">Symbol</th>
 					<th scope="col" class="py-3 px-6">Sector</th>
 					<th scope="col" class="py-3 px-6">Industry</th>
+					<th scope="col" class="py-3 px-6">Action</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -107,6 +74,11 @@
 					<td th:text="${stock.symbol}" class="py-4 px-6"></td>
 					<td th:text="${stock.sector}" class="py-4 px-6"></td>
 					<td th:text="${stock.industry}" class="py-4 px-6">$</td>
+					<td class="py-4 px-6">
+					  <form th:action="@{/{userId}/{stockName}/deleteStock(userId = ${user.user_id}, stockName = ${stock.name})}" method="POST">
+                    	<button type="submit" class="text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Delete</button>
+                      </form>
+                	</td>
 				</tr>
 			</tbody>
 		</table>
@@ -119,6 +91,7 @@
 				<tr>
 					<th scope="col" class="py-3 px-6">Crypto name</th>
 					<th scope="col" class="py-3 px-6">Crypto Symbol</th>
+					<th scope="col" class="py-3 px-6">Action</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -126,6 +99,11 @@
 					<th scope="row"
 						class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white"><a th:text="${crypto.name}" th:href="@{/dashboard/chart/{userId}/{name}(name = ${crypto.name}, userId = ${user.user_id})}"></a></th>
 					<td th:text="${crypto.symbol}" class="py-4 px-6"></td>
+					<td class="py-4 px-6">
+					  <form th:action="@{/{userId}/{cryptoName}/deleteCrypto(userId = ${user.user_id}, cryptoName = ${crypto.name})}" method="POST">
+                    	<button type="submit" class="text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Delete</button>
+                      </form>
+                	</td>
 				</tr>
 			</tbody>
 		</table>
